squash tooltip bugs and allow styling the target

--- a/src/Tooltip/Tooltip.scss
+++ b/src/Tooltip/Tooltip.scss
@@ -13,6 +13,7 @@ $shadow: 0 0 11px 0 $shadow-color;
 }
 
 .tooltip {
+  visibility: hidden;
 }
 
 .tooltipInner {
